[package]
name = "oping"
description = "Rust bindings for liboping, a simple ICMP ping library"
version = "0.3.4"
authors = ["Chris Fallin <cfallin@c1f.net>"]
repository = "https://github.com/cfallin/rust-oping"
documentation = "https://cfallin.github.io/rust-oping/oping/"
build = "build.rs"

license = "MIT"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[dependencies]
libc = "0.2"
